Refactored into a multimodule build so I can split some functionality out of the extractor.